--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -1,9 +1,10 @@
   
 <div class="video_details" *ngIf="id">
+    <!-- do we need the above ngIf? -->
     <div class="row">
         <div class="col-sm-9 player-section">
        
-            <video id="vjs-player" class="video-js vjs-big-play-centered" controls playsinline preload="none"></video>
+            <video id="vjs-player" class="video-js vjs-big-play-centered" controls playsinline preload="none" (click)="playerButton()"></video>
             &nbsp;
             <div class="row">
                 <div class="col-sm-6 left">
