--- a/src/app/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/navbar-mobile/navbar-mobile.component.html
@@ -46,26 +46,26 @@
 
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" [routerLink]="'.'" (click)="show=!show" >Less</a>
+                  <a class="nav-link" [routerLink]="'#'" (click)="show=!show" >Less</a>
                 </li>
                 <li class="nav-item active">
                 
-                  <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Downloads</a>
+                  <a class="nav-link" [routerLink]="'#'" (click)="isMenuCollapsed = true">Downloads</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Favourites</a>
+                  <a class="nav-link" [routerLink]="'#'" (click)="isMenuCollapsed = true">Favourites</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">New Arrivals</a>
+                  <a class="nav-link" [routerLink]="'#'" (click)="isMenuCollapsed = true">New Arrivals</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Trending</a>
+                    <a class="nav-link" [routerLink]="'#'" (click)="isMenuCollapsed = true">Trending</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">My Account</a>
+                    <a class="nav-link" [routerLink]="'#'" (click)="isMenuCollapsed = true">My Account</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" [routerLink]="'.'" (click)="signOut()">Sign Out</a>
+                    <a class="nav-link" [routerLink]="''" (click)="signOut()">Sign Out</a>
                   </li>
                  </ul>
             </div>
