--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg ">
-  <a class="navbar-brand" [routerLink]="'home'">Logo</a>
+  <a class="navbar-brand" routerLink="home">Logo</a>
 
   <!-- Step 3: Toggle the value of the property when the toggler button is clicked. -->
   <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
@@ -11,7 +11,7 @@
     <ul class="navbar-nav mr-auto" >
       <li class="nav-item active">
         <!-- Step 4: Close the menu when a link is clicked. -->
-        <a class="nav-link" [routerLink]="['home','false']" (click)="isMenuCollapsed = true">Home</a>
+        <a class="nav-link" routerLink="home" (click)="isMenuCollapsed = true;toggleView()">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="'clips'" (click)="isMenuCollapsed = true">Clips</a>
