--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,10 +11,10 @@
 
             <div class="row texts">
                 <div class="col-3">
-                    Privacy Policy
+                 <a href="privacy">Privacy Policy</a>   
                 </div>
                 <div class="col-3">
-                    About Us
+                  About Us
                 </div>
                 <div class="col-3">
                     Cookie Preferences
@@ -25,7 +25,7 @@
             </div>
             <div class="row texts">
                 <div class="col-3">
-                    Terms of Use
+                    <a href="tand-c">    Terms of Use</a>
                 </div>
                 <div class="col-3">
                     Investor Relations
