play buttons on sync

--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -4,7 +4,8 @@
     <div class="row">
         <div class="col-sm-9 player-section">
        
-            <video id="vjs-player" class="video-js vjs-big-play-centered" controls playsinline preload="none" data-setup='{"fluid": true}' (click)="playerButton()"></video>
+            <video id="vjs-player" class="video-js vjs-big-play-centered" controls playsinline preload="none" data-setup='{"fluid": true}' ></video>
+            
             &nbsp;
             <div class="row">
                 <div class="col-sm-6 left">
