--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
-<app-video [id]="id" [videoArray]="videoPass" *ngIf="video_selected" ></app-video>
+<app-video [id]="id" [videoArray]="videoPass" *ngIf="dataservice.toggle" ></app-video>
 
 <!-- banner image display -->
-<div id="home" *ngIf="!video_selected">
+<div id="home" *ngIf="!dataservice.toggle">
  
     <div class="banner carousel">
       <!-- <div class="container-fluid"> -->   
