--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -45,7 +45,7 @@
             &nbsp;
           </div>
           <div class="col-2 cols">
-          <img src="assets/images/google.png" alt="google" class="image-size">
+          <img src="assets/images/google.png" alt="google" class="image-size" (click)="dataService.GoogleAuth()">
         </div>
         <div class="col-2 cols">
           <img src="assets/images/facebook.png" alt="facebook" class="image-size">
